unpackaged/main/default/objects/ApplicationLog__c/ApplicationLog__c.object-meta.xml
<CustomObject>
    <description>Object that contains unhandled exception errors &amp; outbound message</description>
    <label>Application Log</label>
    <nameField>
        <displayFormat>Log-{000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>