unpackaged/main/default/objects/ApplicationLog__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <inlineHelpText>JSON or XML body</inlineHelpText>
    <label>Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>