unpackaged/main/default/objects/ApplicationLog__c/fields/Exception_Type__c.field-meta.xml
<CustomField>
    <fullName>Exception_Type__c</fullName>
    <description>Defines the type of exception. This can be retrieved using getTypeName() method</description>
    <label>Exception Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>