unpackaged/main/default/objects/ApplicationLog__c/fields/Object_Id__c.field-meta.xml
<CustomField>
    <fullName>Object_Id__c</fullName>
    <description>Stores the Object id</description>
    <label>Object Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>