unpackaged/main/default/objects/ApplicationLog__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>object where the error occurred</description>
    <label>Object Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>