unpackaged/main/default/objects/ApplicationLog__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>Callout&#39;s Response Body</description>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>