unpackaged/main/default/objects/ApplicationLog__c/fields/Response_Status__c.field-meta.xml
<CustomField>
    <fullName>Response_Status__c</fullName>
    <description>Callout&#39;s Response Status</description>
    <label>Response Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>