unpackaged/main/default/objects/ApplicationLog__c/fields/Response_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Response_Status_Code__c</fullName>
    <description>Callout&#39;s Response Status Code</description>
    <label>Response Status Code</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>