unpackaged/main/default/objects/ApplicationLog__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>This field is part of callout exception retry mechanism.</description>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>