unpackaged/main/default/objects/ApplicationLog__c/fields/Retry_Params__c.field-meta.xml
<CustomField>
    <fullName>Retry_Params__c</fullName>
    <description>Serialised retry parameters</description>
    <label>Retry Params</label>
    <length>10240</length>
    <type>LongTextArea</type>
</CustomField>