unpackaged/main/default/objects/ApplicationLog__c/fields/Retry_Status__c.field-meta.xml
<CustomField>
    <fullName>Retry_Status__c</fullName>
    <description>Based on Retry Count, only applicable to Outbound message log. Retry Count = null means retry succeeded, Retry Count = 0 means all retry attempts failed. Retry Count != 0 means retry is still in progress.</description>
    <formula>IF(!ISPICKVAL(Type__c, &#39;Outbound message&#39;), &#39;&#39;,
IF(ISBLANK(Retry_Count__c), &#39;Retry Succeeded&#39;,
IF(Retry_Count__c = 0, &#39;Retry Failed&#39;,
&#39;Retry In Progress&#39;
)
)
)</formula>
    <label>Retry Status</label>
    <type>Text</type>
</CustomField>