unpackaged/main/default/objects/ApplicationLog__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <inlineHelpText>Source of outbound message</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>