unpackaged/main/default/objects/ApplicationLog__c/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <description>source of exception (e.g. Trigger, Batch Job, Controller Extension, etc.)</description>
    <label>Source Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>