unpackaged/main/default/objects/ApplicationLog__c/fields/Stack_Trace__c.field-meta.xml
<CustomField>
    <fullName>Stack_Trace__c</fullName>
    <description>Exception stack trace. Can be retrieved by (exception).getStackTraceString()</description>
    <label>Stack Trace</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>