unpackaged/main/default/objects/ApplicationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Response_Body__c</columns>
    <columns>Response_Status__c</columns>
    <columns>Body__c</columns>
    <columns>Retry_Params__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>