unpackaged/main/default/objects/ApplicationLog__c/listViews/Contact.listView-meta.xml
<ListView>
    <fullName>Contact</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Stack_Trace__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Contact</value>
    </filters>
    <label>Contact</label>
</ListView>