unpackaged/main/default/objects/ApplicationLog__c/listViews/COS_Updates_Closed_Won_Lost.listView-meta.xml
<ListView>
    <fullName>COS_Updates_Closed_Won_Lost</fullName>
    <columns>NAME</columns>
    <columns>Object_Name__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Function_Name__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Retry_Params__c</columns>
    <columns>Response_Body__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>contains</operation>
        <value>SM_Opportunity.sendClosedLostOpptyToCOS,SM_Opportunity.sendClosedWonOpptyToCOS</value>
    </filters>
    <filters>
        <field>Response_Status_Code__c</field>
        <operation>equals</operation>
        <value>400</value>
    </filters>
    <label>COS Updates (Closed Won/Lost)</label>
</ListView>