unpackaged/main/default/objects/ApplicationLog__c/listViews/Customer_Price_List.listView-meta.xml
<ListView>
    <fullName>Customer_Price_List</fullName>
    <columns>Object_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Source_Type__c</columns>
    <columns>Source__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Method__c</columns>
    <columns>Response_Status_Code__c</columns>
    <columns>Response_Body__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Customer_Price_list</value>
    </filters>
    <label>Customer Price List</label>
</ListView>