unpackaged/main/default/objects/ApplicationLog__c/listViews/Quote_Logs.listView-meta.xml
<ListView>
    <fullName>Quote_Logs</fullName>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <columns>Object_Name__c</columns>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Exception_Type__c</columns>
    <columns>Error_Message__c</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Object_Name__c</field>
        <operation>contains</operation>
        <value>Quote</value>
    </filters>
    <label>Quote</label>
</ListView>